kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-ns
  labels:
    name: devops-ns
