kubernetes/database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devops-project-postgres-statefulset
  namespace: devops-ns
spec:
  serviceName: devops-project-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: devops-ns
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          volumeMounts:
            - name: devops-project-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: devops-project-postgres-data
          persistentVolumeClaim:
            claimName: devops-project-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: devops-project-postgres-service
  namespace: devops-ns
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
  type: LoadBalancer
