kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-project-service
  namespace: devops-ns
spec:
  selector:
    app: devops-project
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
